--- a/Project A .Rmd
+++ b/Project A .Rmd
@@ -6,20 +6,23 @@ output: html_notebook
 ---
 
 #### *Description* 
+
 This report analyzes data from 2012 and 2019 on the number of gun deaths in the United States. It provides descriptive statistics and graphs to understand proportions and frequencies of gun deaths related to gender and racial groups in both years. First, I will report results from 2012. I will then report results from 2019. The report then compares results with gun deaths calculated in 2019. I will also examine the relationship between racial groups and gunshot deaths.
 
 *source of data: Gun Deaths In America By Ben Casselman, Matthew Conlen and Reuben Fischer-Baum https://fivethirtyeight.com/features/gun-deaths/*
 
 ```{r echo=false}
 
-# Reading in the data from the full data csv. Then I need to exclude years 2013 and 2014.
+# ّI will read in the data from the full data csv. Then I need to exclude years 2013 and 2014.
 
 guns_data <- read.csv("full_data.csv", header = TRUE, sep = ",")
 
 guns_12 <- subset(guns_data, guns_data$year==2012)
 
 
-# I will need to change categorical variables to factors to analyze the data. We are asked to examine proportions of type of gun deaths (intent), proportions of race (race) and proportions of gender (sex).I will then start the analysis.
+# I will need to change categorical variables to factors to analyze the data. 
+# We are asked to examine proportions of type of gun deaths (intent), 
+# proportions of race (race) and proportions of gender (sex).I will then start the analysis.
 
 guns_12$intent <- factor(guns_12$intent)
 
@@ -31,16 +34,19 @@ guns_12$sex <- factor(guns_12$sex)
 
 #### *Analysis*
 
+
 In this sample (2021), intent of gunshots/killing is divided into four categories: Accidental, Homicide, Suicide, and Undetermined. Figure 1. illustrates the total of deaths by type. Racial groups are divided into five groups: Asian, Native American, Black, Hispanic, and White. Figure 2. illustrates the number of deaths by gender. Then gender proportions are reported in Figure 3.
+
 
 ```{r echo=FALSE}
 
 # We need to calculate frequencies and proportions for each category. For clarification, objects for 2012 end with 12.
 
 intent_counts_12 <- table(guns_12$intent)
-intent_props_12 <- prop.table(intent_counts_12)
 
+intent_props_12 <- prop.table(intent_counts_12)
 race_counts_12 <- table(guns_12$race)
+
 race_props_12 <- prop.table(race_counts_12)
 
 gender_counts_12 <- table(guns_12$sex)
@@ -48,22 +54,25 @@ gender_props_12 <- prop.table(gender_counts_12)
 
 ```
 
+
 *Figure 1. Bar plots with showing the proportion of gunshot deaths by type*
+
 
 ```{r echo=FALSE}
 
 # This plot shows the proportions of gunshot deaths by type in 2012. 
 
-
-barplot(intent_props_12, main = "Figure 1. Percentage of Gun Death Types in 2012",
-        xlab = "Type of Death",
+barplot(intent_props_12,
+        main = "Figure 1. Percentage of Gun Death Types in 2012", xlab = "Type of Death",
         ylab = "Percent",
         col = c("yellow", "red", "blue", "grey"),
         ylim = c(0,0.75))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
+
 From Figure 1., 20666 gun deaths comprises 62% of this sample committed suicide by shooting themselves while 12039 which is about 36% of gunshots in the sample were homicide. Accidental and undetermined gunshot cases are very low compared to Suicide and Homicide cases. These percentages are reported in Table 1.
+
 
 ```{r echo=FALSE}
 
@@ -86,7 +95,9 @@ colnames(death_type_12) <- c("Numbers", "Proportion")
 print(death_type_12)
 
 ```
+
 Males outnumber females in gunshot deaths in this data. 86% of gunshot deaths were males while 14% were females. This relationship is illustrated in Figure 2. Descriptive statistics for this relationship is illustrated in table 2. 
+
 ```{r}
 
 # Now we do the same with gender. We have already created objects in the code above this.
@@ -105,15 +116,19 @@ print(gender_12)
 
 # barplot representing proportions of genders in 2012 sample.
 
-barplot(gender_prop_round_12, main = "Figure 2. Percentage of Gender Types in 2012",
+barplot(gender_prop_round_12,
+        main = "Figure 2. Percentage of Gender Types in 2012",
         xlab = "Gender",
         ylab = "Percent",
         col = c("red", "blue"),
         ylim = c(0,1))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
+
+
 We also want to look at the number and proportions of racial groups in this data. In the sample, the largest racial group is White, consisting of 21793 deaths which is about 65% in our sample, followed by Black by 7946 and 23% in the sample. Native American/Alaskan and Asian/Pacific Islander comprise about 1% of deaths and Hispanic are less than 1%.   
+
 
 ```{r echo=FALSE}
 
@@ -125,15 +140,18 @@ colnames(race_12) <- c("Numbers", "Proportions")
 
 print(race_12)
 
-barplot(race_prop_round_12, main = "Figure 3. Percentage of Racial Groups in 2012",
+barplot(race_prop_round_12, 
+        main = "Figure 3. Percentage of Racial Groups in 2012",
         xlab = "Race",
         ylab = "Percent",
         col = c("yellow", "red", "blue", "grey"),
         ylim = c(0,1))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
+
 There also seems to be a relationship between racial groups and types of deaths in the sample. Both Homicide and Suicide types of gunshot are the highest reported crimes in this data. 84% of Blacks have committed homicide while only 14% have committed suicide. However, Whites show higher percentage in suicide; about 82%, while about 14% committed suicide. For the Hispanic groups, 64% died in homicide while 33% committed suicide. Even though Asian/Pacific Islanders and Native American/Alaskan groups are smaller in this sample, about 60% of Native American/Native Alaskan and 53% of Asian/Pacific Islanders have commited suicide and about 45% of Asian/Pacific Islanders and 34% of Native American/Alaskans have died in homicide crimes. This relationship is illustrated in Figure 4.  
+
 
 ```{r echo=FALSE}
 
@@ -143,7 +161,8 @@ intent_race_12 <- table(guns_12$intent, guns_12$race)
 
 intent_race_prop_12 <- 100*prop.table(intent_race_12, 2)
 
-barplot(intent_race_prop_12, main = "Figure 4. Gunshot Deaths by Race in 2012",
+barplot(intent_race_prop_12,
+        main = "Figure 4. Gunshot Deaths by Race in 2012",
         xlab = "Race",
         ylab = "Percentage",
         ylim = c(0,100),
@@ -157,6 +176,11 @@ barplot(intent_race_prop_12, main = "Figure 4. Gunshot Deaths by Race in 2012",
 print(intent_race_prop_12)
 ```
 
+```{r}
+# This is the end of analysis for 2012 data. next is looking at 2019 data.
+```
+
+
 ```{r echo=FALSE}
 
 # Reading in the data for the year 2019.
@@ -164,7 +188,9 @@ print(intent_race_prop_12)
 guns_19 <- read.csv("full_data_19.csv", header = TRUE, sep = ",")
 
 
-# I will need to change categorical variables to factors to analyze the data. We are asked to examine proportions of type of gun deaths (intent), proportions of race (race) and proportions of gender (sex).I will then start the analysis.
+# I will need to change categorical variables to factors to analyze the data. 
+# We are asked to examine proportions of type of gun deaths (intent), 
+# proportions of race (race) and proportions of gender (sex).I will then start the analysis.
 
 guns_19$intent <- factor(guns_19$intent)
 
@@ -198,6 +224,7 @@ print(intent_props_19)
 
 
 ```
+
 *Figure 5. The percentages of gunshot death types in 2019*
 
 ```{r echo=FALSE}
@@ -205,15 +232,15 @@ print(intent_props_19)
 # This plot shows the proportions of gunshot deaths by type in 2019. 
 
 
-barplot(intent_props_19, main = "Figure 5. Percentage of Gun Death Types in 2019",
+barplot(intent_props_19, 
+        main = "Figure 5. Percentage of Gun Death Types in 2019",
         xlab = "Type of Death",
         ylab = "Percent",
         col = c("yellow", "red", "blue", "grey"),
         ylim = c(0,0.75))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
-
 
 
 ```{r echo=FALSE}
@@ -237,7 +264,9 @@ colnames(death_type_19) <- c("Numbers", "Proportion")
 print(death_type_19)
 
 ```
+
 In the 2019 sample, about 86% are males (34041 cases) while only 14% (about 5666) cases are females. Figure 6. illustrates this relationship.
+
 ```{r}
 
 # Now we do the same with race and gender. We have already created objects for both categories.
@@ -256,12 +285,13 @@ print(gender_19)
 
 # barplot representing proportions of genders in 2012 sample.
 
-barplot(gender_prop_round_19, main = "Figure 6. Percentage of Gender Types in 2019",
+barplot(gender_prop_round_19, 
+        main = "Figure 6. Percentage of Gender Types in 2019",
         xlab = "Gender",
         ylab = "Percent",
         col = c("pink", "blue"),
         ylim = c(0,1))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
 
@@ -277,15 +307,19 @@ colnames(race_19) <- c("Numbers", "Proportions")
 
 print(race_19)
 
-barplot(race_prop_round_19, main = "Figure 7. Percentage of Racial Groups in 2019",
+barplot(race_prop_round_19, 
+        main = "Figure 7. Percentage of Racial Groups in 2019",
         xlab = "Race",
         ylab = "Percent",
         col = c("yellow", "red", "blue", "grey"),
         ylim = c(0,1))
-box(which = "plot", lty = "solid")
+        box(which = "plot", lty = "solid")
 
 ```
+
+
 There also seems to be a relationship between racial groups and types of deaths in the sample. The largest two death categories are suicide and homicide. 83% of the White racial group have committed suicide while only 15% of the Black racial group committed suicide. On the other hand, 82% of the Black racial group died because of homicide while only 14% of the White group died of homicide. The opposite is true for the Hispanic group. 60% have died of homicide while about 38% died of suicide. While both Asian/Pacific Islanders and Native American/Alaskan groups are substantially smaller, about 60% of Asian/Pacific Islander group have died because of suicide while about 39% died of homicide. For the Native American/Native Alaskan group, however, about 50% died because of homicide and about 47% died because of suicide. Accidental deaths range between 0-1.8% and 0-1.13% died of undetermined causes across racial groups. Figure 8. illustrates this relationship. 
+
 
 ```{r echo=FALSE}
 
@@ -297,7 +331,8 @@ intent_race_prop_19 <- 100*prop.table(intent_race_19, 2)
 
 print(intent_race_prop_19)
 
-barplot(intent_race_prop_19, main = "Figure 8. Gunshot Deaths by Race in 2019",
+barplot(intent_race_prop_19, 
+        main = "Figure 8. Gunshot Deaths by Race in 2019",
         beside = FALSE,
         xlab = "Racial Groups",
         ylab = "Percentage",
@@ -309,6 +344,7 @@ barplot(intent_race_prop_19, main = "Figure 8. Gunshot Deaths by Race in 2019",
         box(which = "plot", lty = "solid")
 
 ```
+
 Numbers and proportions of deaths in 2012 and 2019 are illustrated in Table 3. Reported death cases are higher by 6144 cases; 33562 cases reported in 2012 while the number is 39707 in 2019. Suicide reported cases are 2% less in 2019 while homicide cases are higher by 2%. Accidental cases are about 1% higher in 2012 while there is no difference in the percentage of undetermined cases.
 
 *Table 3. Numbers and percentages of types of death in 2012 and 2019.* 
@@ -331,7 +367,6 @@ Table 4. illustrates the difference between Male and female deaths in 2012 and 2
 
 ```{r echo=FALSE}
 
-
 # gender differences 
 
 male_diff <- 34041-28838
@@ -350,8 +385,12 @@ rownames(gender_death) <- c("Female", "Male")
 print(gender_death)
 
 ```
-We can look at the difference between racial groups in 2012 and 2019 as well. The pattern of the distribution is about similar in 2012 and 2019. Figure 9. and Table 5? show the difference in proportions in 2012 and 2019. The White group were bigger in proportion by about 3%, although there was an increase by about 3000 cases in the White group in 2019. In contrast, the Black group were lower in proportion in 2012 by about 3%, while for the Hispanic group, their proportion increased by 1% in 2019. The Asian Islanders and the Native Americans, on the other hand, increased in proportion by less than 1% in 2019.           
+
+
+We can look at the difference between racial groups in 2012 and 2019 as well. The pattern of the distribution is about similar in 2012 and 2019. Figure 9. and Table 5? show the difference in proportions in 2012 and 2019. The White group were bigger in proportion by about 3%, although there was an increase by about 3000 cases in the White group in 2019. In contrast, the Black group were lower in proportion in 2012 by about 3%, while for the Hispanic group, their proportion increased by 1% in 2019. The Asian Islanders and the Native Americans, on the other hand, increased in proportion by less than 1% in 2019.   
+
 *Table 5. The relationship between race and number of deaths in 2012 and 2019.*
+
 ```{r echo=FALSE}
 
 # I'm going to create race_year which contains different numbers and percentages of racial groups in 2012 and 2019. 
@@ -373,10 +412,11 @@ print(race_year_table)
 
 
 
-barplot(race_year_props, main= "Figure 9. Proportions of Deaths by Race in 2012 and 2019",
+barplot(race_year_props, 
+        main= "Figure 9. Proportions of Deaths by Race in 2012 and 2019",
         ylim = c(0,80), xlab = "Year", ylab = "Percent",
         col = c("green", "red", "blue", "yellow", "grey"),
-          beside = TRUE,legend= c("Asian", "Black", "Hispanic", "Native American", "White"),
+        beside = TRUE,legend= c("Asian", "Black", "Hispanic", "Native American", "White"),
         args.legend = list(title = "Type of Death", cex = .8, x= "topleft"))
         box(which = "plot", lty = "solid")
 
